# cpp-examples

./: .gitignore  README.md
cmake/: Glog.cmake  SetEnv.cmake
concurrent_queue/: CMakeLists.txt  concurrent_queue.hpp  main.cpp
modular_pipeline/: CMakeLists.txt  main.cpp
modular_pipeline/include/: pipeline_module.hpp
